--- a/src/main/resources/templates/pages/home_page.html
+++ b/src/main/resources/templates/pages/home_page.html
@@ -14,10 +14,13 @@
         <h1>Welkom bij DROVN Bank</h1>
     </div>
     <div>
-        <h3><a href="/registreerParticulier">Registreer je als particuliere klant</a></h3>
+        <h3><a href="/registreerparticulier">Registreer je als particuliere klant</a></h3>
     </div>
     <div>
-        <h3><a href="/registreerZakelijk">Registreer je als zakelijke klant</a></h3>
+        <h3><a href="/registreerzakelijk">Registreer je als zakelijke klant</a></h3>
+    </div>
+    <div>
+        <h3><a href="/inloggen">Inloggen bestaande klanten</a></h3>
     </div>
 </div>
 
