Header nav / footer nav / footer scripts

--- a/src/main/resources/scss/styles.scss
+++ b/src/main/resources/scss/styles.scss
@@ -35,3 +35,11 @@ $light: $white;
 $font-family-sans-serif: 'PT Sans', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 
 @import "../../../../node_modules/bootstrap/scss/bootstrap";
+
+.text-blue {
+  color: $blue;
+}
+
+.text-orange {
+  color: $orange;
+}
