inloggen weer op de oude manier gedaan, werkt bijna

--- a/src/main/resources/templates/pages/home_page.html
+++ b/src/main/resources/templates/pages/home_page.html
@@ -20,7 +20,7 @@
         <h3><a href="/registreerzakelijk">Registreer je als zakelijke klant</a></h3>
     </div>
     <div>
-        <h3><a href="/inloggen">Inloggen bestaande klanten</a></h3>
+        <h3><a href="/login">Inloggen bestaande klanten</a></h3>
     </div>
 </div>
 
