--- a/src/main/resources/templates/pages/login.html
+++ b/src/main/resources/templates/pages/login.html
@@ -16,11 +16,11 @@
         <table>
             <tr>
                 <td><label>Gebruikersnaam</label></td>
-                <td><input type="text" name="gebruikersnaam"></td>
+                <td><input type="text" name="userName"></td>
             </tr>
             <tr>
                 <td><label>Wachtwoord</label></td>
-                <td><input type="text" name="wachtwoord"></td>
+                <td><input type="password" name="password"></td>
             </tr>
             <tr>
                 <td><input type="submit" name="OK" value="OK"></td>
