--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -8,6 +8,7 @@
     <meta name="keywords" th:content="${metaKeywords}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="https://kit.fontawesome.com/acc6e38b93.js" crossorigin="anonymous"></script>
     <script src="/js/jquery/jquery.min.js"></script>
     <script src="/js/bootstrap/bootstrap.bundle.min.js"></script>
 </head>
