--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -6,7 +6,7 @@
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
                 <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                     class="d-inline-block align-top" alt="" loading="lazy">
+                     class="d-inline-block align-top" alt="">
                 Bootstrap
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -38,12 +38,15 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownService">
                             <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/registratie' ? 'active':''}"
-                               href="/registratie">Klant worden</a>
+                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerparticulier' ? 'active':''}"
+                               href="/registreerparticulier">Klant worden - Particulier</a>
+                            <a class="dropdown-item"
+                               th:classappend="${#httpServletRequest.getRequestURI() == '/registreerzakelijk' ? 'active':''}"
+                               href="/registreerparticulier">Klant worden - Zakelijk</a>
                             <a class="dropdown-item" href="#">Account aanmaken</a>
                             <a class="dropdown-item" href="#">Rekening openen</a>
                             <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/login' ? 'active':''}"
+                               th:classappend="${#httpServletRequest.getRequestURI() == '/inloggen' ? 'active':''}"
                                href="/login">Inloggen</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Contact</a>
@@ -53,7 +56,7 @@
                 <div class="container pl-0 pr-0">
                     <div class="col-12 d-flex flex-row align-items-lg-end justify-content-lg-end">
                         <a class="btn btn-primary mr-2" href="/registratie">Klant worden</a>
-                        <a class="btn btn-outline-primary" href="/login">Inloggen</a>
+                        <a class="btn btn-outline-primary" href="/inloggen">Inloggen</a>
                     </div>
                 </div>
                 <!--<form class="form-inline my-2 my-lg-0">
@@ -62,14 +65,14 @@
                 </form>-->
             </div>
         </nav>
+    </div>
 </header>
-</div>
 
 <header class="header" id="header-login" th:fragment="header-login">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">
             <img src="https://getbootstrap.com//docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                 class="d-inline-block align-top" alt="" loading="lazy">
+                 class="d-inline-block align-top" alt="">
             Bootstrap
         </a>
     </nav>
