Foutpagina aangepast & link naar /login

--- a/src/main/resources/templates/pages/foutpagina.html
+++ b/src/main/resources/templates/pages/foutpagina.html
@@ -5,8 +5,13 @@
     <title>foutpagina</title>
 </head>
 <body>
-
-<h1>Foute inloggegevens!</h1>
-
+<div class="container">
+    <div align="center">
+        <img src="ErrorImage" alt="Error"/>
+        <h1>Oeps, er ging iets mis</h1>
+    <h2>Inloggen mislukt, probeer het nog een keer</h2>
+        <a class="btn btn-outline-primary" href="/login">Opnieuw inloggen</a>
+    </div>
+</div>
 </body>
 </html>
