--- a/src/main/resources/templates/pages/rekeningoverzicht.html
+++ b/src/main/resources/templates/pages/rekeningoverzicht.html
@@ -10,12 +10,14 @@
     <p th:if="${allAccountsList.isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
     <table th:unless="${allAccountsList.isEmpty()}">
         <tr>
-            <th>rekeningnummer</th>
-            <th>tenaamstelling</th>
+            <th>IBAN</th>
             <th>saldo</th>
         </tr>
-
+        <tr th:each="a : ${allAccountsList}">
+            <td th:text="${a.iban}"></td>
+            <td th:text="${a.balance}"></td>
+        </tr>
     </table>
-    <p>Nog geen klant? <a href="/nieuwe-klant">Registreer dan hier</a></p>
+    <p>Nog geen klant? <a href="/registratie">Registreer dan hier</a></p>
 </body>
 </html>
