--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,7 +46,7 @@
                             <a class="dropdown-item" href="#">Account aanmaken</a>
                             <a class="dropdown-item" href="#">Rekening openen</a>
                             <a class="dropdown-item"
-                               th:classappend="${#httpServletRequest.getRequestURI() == '/inloggen' ? 'active':''}"
+                               th:classappend="${#httpServletRequest.getRequestURI() == '/login' ? 'active':''}"
                                href="/login">Inloggen</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Contact</a>
