--- a/src/main/resources/templates/pages/rekeningoverzicht.html
+++ b/src/main/resources/templates/pages/rekeningoverzicht.html
@@ -6,10 +6,10 @@
     <title>Rekeningoverzicht</title>
 </head>
 <body>
-    <h1 >Rekeningoverzicht van:</h1>
-    <h2 th:text="${fullName}">naam</h2>
+    <h1>Rekeningoverzicht van:</h1>
+    <!--<h2 th:text="${fullName}">naam</h2>
     <p th:if="${allAccountsList.isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
-    <table th:unless="${allAccountsList.isEmpty()}">
+    <table th:unless="${allAccountsList.isEmpty()}">-->
         <tr>
             <th>IBAN</th>
             <th>tenaamstelling</th>
