--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <div id="cookies" class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <!--<div class="col-lg-12">
                     <div class="row">
                         <div class="col-lg-12">
                             <h3>Ook wij gebruiken cookies</h3>
@@ -23,7 +23,7 @@
                                 Akkoord
                             </a>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
