--- a/src/main/resources/templates/pages/rekeningoverzicht.html
+++ b/src/main/resources/templates/pages/rekeningoverzicht.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Rekeningoverzicht van:</h1>
-    <!--<h2 th:text="${fullName}">naam</h2>
-    <p th:if="${allAccountsList.isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
+    <h2 th:text="${customerWithAccountOverview.getCustomer().getUsername()}">naam</h2>
+    <!--<p th:if="${allAccountsList.isEmpty()}">Er zijn geen rekeningen om weer te geven</p>
     <table th:unless="${allAccountsList.isEmpty()}">-->
         <tr>
             <th>IBAN</th>
